--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "postcss-import",
+  "name": "postcss-import-sync",
   "version": "8.1.2",
-  "description": "PostCSS plugin to import CSS files",
+  "description": "PostCSS plugin to import CSS files syncronously",
   "keywords": [
     "css",
     "postcss",
@@ -12,7 +12,7 @@
   ],
   "author": "Maxime Thirouin",
   "license": "MIT",
-  "repository": "https://github.com/postcss/postcss-import.git",
+  "repository": "https://github.com/cslarson/postcss-import-sync.git",
   "files": [
     "index.js",
     "lib"
@@ -33,7 +33,7 @@
     "postcss-scss": "^0.1.3"
   },
   "jspm": {
-    "name": "postcss-import",
+    "name": "postcss-import-sync",
     "main": "index.js",
     "browser": {
       "./lib/load-content": "@empty",
