--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "postcss": "^5.0.14",
     "postcss-value-parser": "^3.2.3",
     "read-cache": "^1.0.0",
-    "resolve": "^1.1.7"
+    "resolve": "^1.1.7",
+    "sync-promise": "^1.0.1"
   },
   "devDependencies": {
     "ava": "^0.11.0",
